Interim report finished

--- a/submissions/interim/bibliography.bib
+++ b/submissions/interim/bibliography.bib
@@ -10,10 +10,85 @@
 	note = {arXiv: 1612.04885},
 }
 
+@article{Spann2003,
+	author = {Skiera, Bernd and Spann, Martin},
+	year = {2003},
+	month = {10},
+	pages = {1310-1326},
+	title = {Internet-Based Virtual Stock Markets for Business Forecasting},
+	volume = {49},
+	journal = {Management Science},
+	doi = {10.1287/mnsc.49.10.1310.17314}
+}
+
+@article{Berg2006,
+	author = {Berg, J.E. and Rietz, Thomas},
+	year = {2006},
+	month = {01},
+	pages = {142-169},
+	title = {The Iowa electronic markets: Stylized facts and open issues},
+	journal = {AEI- Brookings Joint Center for Regulatory Studies}
+}
+
+@inproceedings{Nay2016,
+	title={Betting and belief: prediction markets and attribution of climate change},
+	author={Nay, John J and Van der Linden, Martin and Gilligan, Jonathan M},
+	booktitle={2016 Winter Simulation Conference (WSC)},
+	pages={1666--1677},
+	year={2016},
+	organization={IEEE}
+}
+
+@inproceedings{Kroer2016,
+	title={Arbitrage-free combinatorial market making via integer programming},
+	author={Kroer, Christian and Dud{\'\i}k, Miroslav and Lahaie, S{\'e}bastien and Balakrishnan, Sivaraman},
+	booktitle={Proceedings of the 2016 ACM Conference on Economics and Computation},
+	pages={161--178},
+	year={2016}
+}
+
+@inproceedings{Liu2020,
+	author = {Liu, Yang and Wang, Juntao and Chen, Yiling},
+	title = {Surrogate Scoring Rules},
+	year = {2020},
+	isbn = {9781450379755},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3391403.3399488},
+	doi = {10.1145/3391403.3399488},
+	booktitle = {Proceedings of the 21st ACM Conference on Economics and Computation},
+	pages = {853–871},
+	numpages = {19},
+	keywords = {dominant strategy incentive compatibility, peer prediction,
+		strictly proper scoring rules, information calibration, information
+			elicitation without verification},
+	location = {Virtual Event, Hungary},
+	series = {EC ’20}
+}
+
+@article{Peterson2015,
+	title={Augur: a decentralized oracle and prediction market platform},
+	author={Peterson, Jack and Krug, Joseph and Zoltu, Micah and Williams, Austin K and Alexander, Stephanie},
+	journal={arXiv preprint arXiv:1501.01042},
+	year={2015}
+}
+
 @misc{Predictalot,
   title = {{Predictalot!} (and we mean a lot)},
   howpublished = {\url{http://blog.oddhead.com/2010/03/05/predictalot/}},
   note = {Accessed: 2020-02-16}
+}
+
+@misc{Gnosis,
+  title = {Gnosis},
+  howpublished = {\url{https://gnosis.io/}},
+  note = {Accessed: 2020-04-16}
+}
+
+@misc{Hivemind,
+  title = {Hivemind},
+  howpublished = {\url{https://hvmd.io/}},
+  note = {Accessed: 2020-04-16}
 }
 
 @misc{PredictIt,
@@ -74,4 +149,17 @@
 	author = {Jurca, Radu and Faltings, Boi},
 	year = {2011},
 	pages = {9},
+}
+
+@misc{assassinationMarkets,
+  title = {Assassination market},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Assassination_market}},
+  note = {Accessed: 2020-06-06}
+}
+
+@misc{crowdfundingMurder,
+  title = {{Meet the `Assassination Market' Creator Who's Crowdfunding Murder
+	  with Bitcoins}},
+  howpublished = {\url{https://www.forbes.com/sites/andygreenberg/2013/11/18/meet-the-assassination-market-creator-whos-crowdfunding-murder-with-bitcoins/}},
+  note = {Accessed: 2020-06-06}
 }
