--- a/submissions/dissertation/bibliography.bib
+++ b/submissions/dissertation/bibliography.bib
@@ -1,13 +1,92 @@
-@article{CODiPM,
-	title = {Crowdsourced {Outcome} {Determination} in {Prediction} {Markets}},
-	url = {http://arxiv.org/abs/1612.04885},
-	language = {en},
-	urldate = {2020-03-01},
-	journal = {arXiv:1612.04885 [cs]},
+@article{Hanson2003,
+	author={Robin Hanson},
+	title={{Combinatorial Information Market Design}},
+	journal={Information Systems Frontiers},
+	year=2003,
+	volume={5},
+	number={1},
+	pages={107-119},
+	month={January},
+	keywords={market maker; scoring rule; information aggregation},
+	doi={10.1023/A:1022058209073},
+	url={https://ideas.repec.org/a/spr/infosf/v5y2003i1d10.1023_a1022058209073.html}
+}
+
+@inproceedings{Chen2007,
+	title = {A Utility Framework for Bounded-Loss Market Makers},
+	author = {Y. Chen and D. Pennock},
+	booktitle = {UAI},
+	year = {2007}
+}
+
+@inbook{AGTBook,
+	author = {Nisan, Noam and Roughgarden, Tim and Tardos, Eva and Vazirani, Vijay V.},
+	title = {Algorithmic Game Theory},
+	year = {2007},
+	isbn = {0521872820},
+	publisher = {Cambridge University Press},
+	address = {USA},
+}
+
+@book{WisdomOfCrowds,
+	author = {Surowiecki, James},
+	title = {The Wisdom of Crowds: Why the Many are Smarter Than the Few and
+		how Collective Wisdom Shapes Business, Economies, Societies, and
+			Nations},
+	year = {2004},
+	isbn = {0385503865},
+	publisher = {Doubleday},
+	address = {USA},
+}
+
+@inproceedings{Dudik2012,
+	author = {Dudik, Miroslav and Lahaie, Sebastien and Pennock, David M.},
+	title = {A Tractable Combinatorial Market Maker Using Constraint Generation},
+	year = {2012},
+	isbn = {9781450314152},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2229012.2229047},
+	doi = {10.1145/2229012.2229047},
+	booktitle = {Proceedings of the 13th ACM Conference on Electronic Commerce},
+	pages = {459–476},
+	numpages = {18},
+	keywords = {prediction market, market maker, independent markets, combinatorial security, convex optimization},
+	location = {Valencia, Spain},
+	series = {EC '12}
+}
+
+@misc{AugurDeathMarket,
+  title = {This new blockchain-based betting platform could cause Napster-size
+	  legal headaches},
+  howpublished =
+  {\url{https://www.technologyreview.com/2018/08/02/240354/this-new-ethereum-based-assassination-market-platform-could-cause-napster-size-legal/}},
+  note = {Accessed: 2020-08-27}
+}
+
+@inproceedings{CODiPM,
 	author = {Freeman, Rupert and Lahaie, Sebastien and Pennock, David M.},
-	month = dec,
-	year = {2016},
-	note = {arXiv: 1612.04885},
+	title = {Crowdsourced Outcome Determination in Prediction Markets},
+	year = {2017},
+	publisher = {AAAI Press},
+	abstract = {A prediction market is a useful means of aggregating
+		information about a future event. To function, the market needs a
+			trusted entity who will verify the true outcome in the end.
+			Motivated by the recent introduction of decentralized prediction
+			markets, we introduce a mechanism that allows for the outcome to be
+			determined by the votes of a group of arbiters who may themselves
+			hold stakes in the market. Despite the potential conflict of
+			interest, we derive conditions under which we can incentivize
+			arbiters to vote truthfully by using funds raised from market fees
+			to implement a peer prediction mechanism. Finally, we investigate
+			what parameter values could be used in a real-world implementation
+			of our mechanism.},
+	booktitle = {Proceedings of the Thirty-First AAAI Conference on Artificial
+		Intelligence},
+	pages = {523–529},
+	numpages = {7},
+	location = {San Francisco, California, USA},
+	series = {AAAI'17}
 }
 
 @article{Spann2003,
@@ -63,7 +142,7 @@
 		strictly proper scoring rules, information calibration, information
 			elicitation without verification},
 	location = {Virtual Event, Hungary},
-	series = {EC ’20}
+	series = {EC '20}
 }
 
 @article{Peterson2015,
@@ -115,7 +194,6 @@
 	author = {Hanson, Robin},
 	pages = {12},
 }
-
 
 @phdthesis{Witkowski2014,
 	title = {Robust {Peer} {Prediction} {Mechanisms}},
