Added code for calculating signal beliefs, now integrate

--- a/submissions/dissertation/bibliography.bib
+++ b/submissions/dissertation/bibliography.bib
@@ -40,7 +40,7 @@
 }
 
 @inproceedings{Dudik2012,
-	author = {Dudik, Miroslav and Lahaie, Sebastien and Pennock, David M.},
+	author = {Dud\'ik, Miroslav and Lahaie, Sebastien and Pennock, David M.},
 	title = {A Tractable Combinatorial Market Maker Using Constraint Generation},
 	year = {2012},
 	isbn = {9781450314152},
@@ -64,7 +64,7 @@
   note = {Accessed: 2020-08-27}
 }
 
-@inproceedings{CODiPM,
+@inproceedings{Freeman2017,
 	author = {Freeman, Rupert and Lahaie, Sebastien and Pennock, David M.},
 	title = {Crowdsourced Outcome Determination in Prediction Markets},
 	year = {2017},
@@ -164,6 +164,17 @@
   note = {Accessed: 2020-04-16}
 }
 
+@misc{Omen,
+  title = {Omen},
+  howpublished = {\url{https://omen.eth.link/}},
+  note = {Accessed: 2020-08-28}
+}
+
+@misc{InTrade,
+  title = {{InTrade}},
+  howpublished = {\url{https://intrade.com/}},
+  note = {Accessed: 2020-08-28}
+}
 @misc{Hivemind,
   title = {Hivemind},
   howpublished = {\url{https://hvmd.io/}},
