--- a/submissions/dissertation/dissertation.tex
+++ b/submissions/dissertation/dissertation.tex
@@ -122,8 +122,8 @@
 % - effective testing/validation regime;
 % - quality of results and analysis; 
 % - critical evaluation of the project;
-% - quality of practical/technical work and overall
-% 	level of technical achievement
+% - quality of practical/technical work and overall level of technical
+%   achievement
 % 
 % Project management and organisation
 % - consistent progress;
@@ -155,7 +155,7 @@
 
 \input{sections/introduction}
 \input{sections/background}
-%\input{sections/goals}
+\input{sections/goals}
 %\input{sections/design}
 %\input{sections/implementation}
 %\input{sections/management}
