--- a/submissions/dissertation/sections/introduction.tex
+++ b/submissions/dissertation/sections/introduction.tex
@@ -36,7 +36,7 @@ of the market for their own gain by submitting false reports. It is also
 important that users continue to act according to their true beliefs so we may
 learn about the true public sentiment on the events. We base our design on the
 incentive compatible outcome determination mechanism proposed by Freeman,
-Lahaie, and Pennock~\cite{CODiPM}, which allows us to crowdsource market
+Lahaie, and Pennock~\cite{Freeman2017}, which allows us to crowdsource market
 outcomes while incentivising users to act truthfully in all stages of the
 prediction market.
 
