--- a/submissions/dissertation/sections/goals.tex
+++ b/submissions/dissertation/sections/goals.tex
@@ -2,38 +2,80 @@
 
 \label{sec:goals}
 
-The overall goal of the project is to implement a decentralised prediction
-market in which users may act as arbiters in markets in which they themselves
-are stakeholders. This will be achieved by the following essential objectives:
+\subsection{Core Features}
+
+The goal of this project is to implement a truthful decentralised prediction
+market in which users may specify the bets on which to trade. The market
+outcomes will be decided by peer prediction, in which events are settled by a
+subset of the users known as arbiters. A user may even act as an arbiter in a
+market in which they themselves may hold a stake. Specifically, we seek to:
 
 \begin{itemize}
-	\itemsep0em
-	\item create a web application where users may specify bets to trade on
-	\item implement a trading mechanism allowing users to buy and sell
-		shares in user-made securities
+	\item create a web application on which to host the prediction market
+	\item allow users to create custom bets
+	\item implement a trading mechanism that allows users to buy and sell
+		shares in the user-made securities
 	\item crowdsource outcome determination using reports from arbiters who may
-		hold positions in the markets
-	\item incentivise truthful reporting from the arbiters
+		hold positions in the market
+	\item incentivise truthful behaviour at all stages in the mechanism
 \end{itemize}
 
-These goals will largely be achieved by implementing the mechanism laid out by
-Freeman et al~\cite{CODiPM}. The first three goals cover core functionality of
-any decentralised prediction market, while the fourth is concerned with tuning
-system parameters, before and during execution, in order to ensure that users
-do not manipulate the mechanism.
- 
-Other features that we look to implement that are not essential to the running
-of the system but highly desirable for user experience include asynchronous
-communication with the server to display up-to-date pricing information without
-a page refresh, and the automated closing of markets.  Indeed, while their
-current omission does not necessarily hamper the functionality of the market
-itself, they should be implemented in order for the system to run smoothly and
-independently.
+These goals will largely be achieved by implementing the mechanism outlined by
+Freeman et al.~\cite{Freeman2017}, albeit wit several practical modifications.
+The first three goals cover core functionality of any decentralised prediction
+market, while the fourth is concerned with the tuning of system parameters,
+before and during execution, in order to ensure that users do not manipulate
+the mechanism. In this users are not only discouraged from attempting to
+``game'' the system for personal gain, they are hurt for doing so.
 
-The following additional features could be implemented, although they are not
-the focus of the project or are unlikely to be achieved in the remaining time
-frame. They include removing the need to explicitly ask for signal beliefs
-from arbiters; the option to sort markets by categories; displaying user trade
-histories; and sanitising database inputs.
+Other non-essential features but highly desirable for strong user experience
+include asynchronous communication with the server in order to display
+up-to-date pricing information to the user without a page refresh, and the
+automated closing of markets. Both of these features would make the system
+straightforward and intuitive to use. Moreover, it would allow the system to
+run independently, meaning the market's functioning is only influenced by the
+community, one of the key points of implementing a decentralised market.
 
+As we will discuss in more detail in Section~\ref{sec:design}, one aspect of
+the mechanism is the assumption that the system knows the signal error rates
+when user's receive news about a market's outcome. This is unrealistic in
+practice, since we cannot hope to know the exact where each user learns about
+the outcome of the event nor the accuracy of said source's reporting. Hence we
+also look to implement a way in which users do not need to be explicitly asked
+their estimates of signal accuracy, and instead this is calculated based on
+their past reporting history. This leaves less opportunity to game the system,
+the entire point of implementing this prediction market mechanism.
 
+\subsection{Stretch Features}
+
+With more time, there are plenty of additional features that could be
+implemented to render the system more intuitive and usable. These include the
+option to create different types of markets, particularly categorical ones
+since they would function similarly to binary markets but allow multiple
+related markets to be expressed more succinctly. Furthermore the option to
+create and sort markets by categories would help users offer their information
+more readily if they are especially interested in a certain topic, say politics
+or sport.
+
+A useful feature to implement would be the tracking of price histories for each
+security. This would enable graphs to be generated so that users could be more
+informed on how the forecast of an event has changed over time. This would make
+the decision to participate at a particular price point more interesting on
+their part since they are not only estimating their belief on the probability
+that the event will have a positive outcome, but also on how the other users
+will act, similar to a real stock market.
+
+Finally, an issue with the mechanism of Freeman et al. as it stands is that it
+does not directly punish users for creating markets on ambiguous bets. Traders
+may become confused about the wording, leading to different interpretations and
+hence different users trading on different beliefs -- this is not useful for
+information aggregation. Although the negative effects are somewhat mitigated
+in that the very same community that trades in the security also decides on its
+outcome, there is no mechanism in place to specifically encourage clear bets.
+This is something that could be improved and would be useful in avoiding the
+market becoming swamped with overly subjective wagers.
+
+\subsection{Motivation}
+
+As discussed, there are already numerous decentralised markets that exist in
+the literature.
