Moved javascript functions elsewhere

--- a/submissions/dissertation/dissertation.tex
+++ b/submissions/dissertation/dissertation.tex
@@ -156,7 +156,7 @@
 \input{sections/introduction}
 \input{sections/background}
 \input{sections/goals}
-%\input{sections/design}
+\input{sections/design}
 %\input{sections/implementation}
 %\input{sections/management}
 %\input{sections/evaluation}
